--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -1,9 +1,14 @@
-# Production dependencies for Vercel deployment
+# ========================================
+# Production Dependencies (Railway/Render)
+# ========================================
+
 # FastAPI and web server
 fastapi==0.109.2
 uvicorn[standard]==0.27.1
+gunicorn==21.2.0
 pydantic==2.6.1
 pydantic-settings==2.1.0
+email-validator==2.1.0.post1
 
 # Database drivers
 psycopg2-binary==2.9.9
@@ -15,7 +20,7 @@ qdrant-client==1.7.3
 
 # OpenRouter API (via OpenAI SDK)
 openai==1.12.0
-tiktoken==0.8.0  # Updated for better pre-built wheel support
+tiktoken==0.8.0
 
 # Utilities
 pyyaml==6.0.1
@@ -28,3 +33,7 @@ python-dotenv==1.0.1
 # Markdown processing
 markdown==3.5.2
 beautifulsoup4==4.12.3
+lxml==5.1.0
+
+# HTTP client for health checks
+httpx==0.26.0
