--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ PyJWT==2.8.0
 passlib==1.7.4
 bcrypt==4.1.2
 python-dotenv==1.0.1
+tenacity==8.2.3
 
 # Markdown processing
 markdown==3.5.2
@@ -37,3 +38,5 @@ lxml==5.1.0
 
 # HTTP client for health checks
 httpx==0.26.0
+
+
